# iceportal_rs

./: Cargo.toml  README.md
.github/workflows/: publish.yml
iceportal_derive/: Cargo.toml  README.md
iceportal_derive/src/: lib.rs
src/: bap.rs  connection.rs  errors.rs  fetcher.rs  global_models.rs  lib.rs  status.rs  time.rs  trip_info.rs
src/tests/: bap.rs  connection.rs  mod.rs  prepare.rs  status.rs  time.rs  trip_info.rs
