[package]
name = "iceportal"
version = "1.0.4"
edition = "2021"
authors = ["AdriDevelopsThings"]
readme = "README.md"
repository = "https://github.com/AdriDevelopsThings/iceportal_rs"
license = "AGPL-3.0"
description = "Fetch data from the iceportal api in a train"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "iceportal"

[workspace]
members = [".", "iceportal_derive"]

[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
iceportal_derive = { version = "1.0.3", git = "https://github.com/AdriDevelopsThings/iceportal_rs" }