[package]
name = "iceportal"
version = "2.0.0"
edition = "2021"
authors = ["AdriDevelopsThings"]
readme = "README.md"
repository = "https://github.com/AdriDevelopsThings/iceportal_rs"
license = "AGPL-3.0"
description = "Fetch data from the iceportal api in a train"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "iceportal"

[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["macros"] }
