[package]
name = "iceportal"
version = "3.1.0"
edition = "2021"
authors = ["AdriDevelopsThings"]
readme = "README.md"
repository = "https://github.com/AdriDevelopsThings/iceportal_rs"
license = "AGPL-3.0"
description = "Fetch data from the iceportal api in a train"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "iceportal"
doctest = false

[dependencies]
chrono = "0"
reqwest = { version = "0", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
